# ansible-node

./: .drone.yml  .gitignore  Makefile  Pipfile  README.md  ansible.cfg  hosts  known_hosts  provision.yml  pyproject.toml  reboot.yml  requirements.yml  upgrade.yml  vars.example.yml  watchdog.yml
.github/workflows/: commit.yml
group_vars/: raspberry_pi.yml
group_vars/home_assistant/: vars.yml
group_vars/print_server/: vars.yml
group_vars/unifi/: vars.yml
host_vars/: home.lunarkittylanding.party.yml  unifi.lan.yml
roles/adborden.node/defaults/: main.yml
roles/adborden.node/meta/: main.yml
roles/adborden.node/molecule/default/: converge.yml  molecule.yml  prepare.yml
roles/adborden.node/molecule/default/tests/: test_default.py
roles/adborden.node/tasks/: main.yml  ufw.yml
